	*  Fixed bug #4960 - running SpecTcl from ~ fails. Note users will
	need to get the new SpecTclRC.tcl from Skel.
	* Fix for bug #5642 - Xamine compilation warnings.
5.0-experimental - try to slip root under the hood.
	* Resolve data type conflicts between typedefs in SpecTcl and those
	in root in favor or root.
	* Make Spectrum1DL histogram into TH1I
	* Make Spectrum1DW histogram into TH1W
	* Make Spectrum1DB histogram into TH1C
	* Make Spectrum2DL histogram into TH2I
	* Make Spectrum2DW histogram into TH2W
	* Make Spectrum2DB histogram into TH2C
	* First shot at merging SpecTcl and Root Event loops.
	* Add rootexec command - executes a root macro file in root
	interp.
	* Replace Tcl exit command with gApplication->Terminate()
	operation.  Voids segfaults.
	* Slide TH1I underneath the hood of CBitSpectrumL
	* Slide TH1S underneath the hood of CBitSpectrumW
	* Slide a TH1I under the hood of CGamma1DL
	* Slide a TH1S under the hood of a CGamma1DW
	* Slide a TH2C under the hood of CGamma2DB
	* Slide a TH2I under the hood of CGamma2DL
	* Slide a TH2S under the hood of CGamma2DW
        * Modify template class CGamma2DD (gamma deluxe spectra) to use
	Root histogram classes. 
	* Modify template class CGammaSummarySpectrum to use Root
	histogram classes.
	* Slide a TH1I under the hood of CSpectrumS (strip chart
	spectrum).
	* Slide a TH2C under the hood of CSummarySpectrumB (byte summary
	spectrum).
	* Fix free errors on exit.
	* Slide a TH2I under the hood of CSummarySpectrumL (long summary
	spectrum).
	* Slide a TH2S under the hood of CSummarySpectrumW (word summary
	spectrum).
	* Setup base class modes for CSpectrum2Dm (2d-sum spectrum) for
	root histogramming
	* Slide a TH2I under the hood of CSpectrum2DmL (multiply
	incremented 2d longword spectrum).
	* Slide a TH2S under the hood of CSpectrum2DmW and ensure that the
	base class sets the data type properly for both 2DmL and 2DmW
	* Slide a TH2C under the hood of CVSpectrum2DmB (byte 2d multiply).