@@ -113,7 +113,7 @@ CBitSpectrumL::CBitSpectrumL(const std::string& rName,
 			     UInt_t nChannels) :
   CSpectrum(rName, nId, 
 	    Axes(1, CAxis(0.0, Float_t(nChannels-1), 
-			  nChannels,
+			  nChannels + 2,
 			  CParameterMapping(rParameter)))),
   m_nChannels(nChannels + 2),
   m_nParameter(rParameter.getNumber()),
@@ -161,7 +161,7 @@ CBitSpectrumL::CBitSpectrumL(const std::string& rName, UInt_t nId,
 	    Axes(1, 
 		 CAxis((Float_t) nLow,
 		       (Float_t) nHigh,
-		       (nHigh - nLow),
+		       (nHigh - nLow) ,
 		       CParameterMapping(rParameter)))),
   m_nChannels(nHigh - nLow + 2),
   m_nParameter(rParameter.getNumber()),
